--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 		<link href="css/main.css" rel="stylesheet">
 		<script src="js/jquery-1.12.0.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+		<script src="js/jquery.particleground.min.js"></script>
+
+		<link rel="stylesheet" href="css/photoswipe.css"> 
+		<link rel="stylesheet" href="css/default-skin/default-skin.css"> 
+
+		<script src="js/photoswipe.min.js"></script> 
+		<script src="js/photoswipe-ui-default.min.js"></script> 
 	</head>
 	<body>
 		<div class="header">
@@ -15,6 +22,39 @@
 		</div>
 		<div class="content-wrapper">
 			<div class="content">
+				<a class="thumbnail-wrapper" href="#" onclick="expand(0)">
+					<img src="assets/DSC00031.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(1)">
+					<img src="assets/DSC00047.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(2)">
+					<img src="assets/DSC00052.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(3)">
+					<img src="assets/DSC00054.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(4)">
+					<img src="assets/DSC00057.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(5)">
+					<img src="assets/DSC00103.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(6)">
+					<img src="assets/DSC00211.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(7)">
+					<img src="assets/DSC00214.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(8)">
+					<img src="assets/DSC00276.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(9)">
+					<img src="assets/DSC00378.JPG" class="thumbnail">
+				</a>
+				<a class="thumbnail-wrapper" href="#" onclick="expand(10)">
+					<img src="assets/DSC00385.JPG" class="thumbnail">
+				</a>
 			</div>
 		</div>
 		<div class="footer-container">
@@ -31,5 +71,71 @@
 			</div>
 		</div>
 		<div class="bottom"></div>
+
+		<!-- Root element of PhotoSwipe. Must have class pswp. -->
+		<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+		    <!-- Background of PhotoSwipe. 
+		         It's a separate element as animating opacity is faster than rgba(). -->
+		    <div class="pswp__bg"></div>
+
+		    <!-- Slides wrapper with overflow:hidden. -->
+		    <div class="pswp__scroll-wrap">
+
+		        <!-- Container that holds slides. 
+		            PhotoSwipe keeps only 3 of them in the DOM to save memory.
+		            Don't modify these 3 pswp__item elements, data is added later on. -->
+		        <div class="pswp__container">
+		            <div class="pswp__item"></div>
+		            <div class="pswp__item"></div>
+		            <div class="pswp__item"></div>
+		        </div>
+
+		        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+		        <div class="pswp__ui pswp__ui--hidden">
+
+		            <div class="pswp__top-bar">
+
+		                <!--  Controls are self-explanatory. Order can be changed. -->
+
+		                <div class="pswp__counter"></div>
+
+		                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+		                <button class="pswp__button pswp__button--share" title="Share"></button>
+
+		                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+		                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+		                <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+		                <!-- element will get class pswp__preloader--active when preloader is running -->
+		                <div class="pswp__preloader">
+		                    <div class="pswp__preloader__icn">
+		                      <div class="pswp__preloader__cut">
+		                        <div class="pswp__preloader__donut"></div>
+		                      </div>
+		                    </div>
+		                </div>
+		            </div>
+
+		            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+		                <div class="pswp__share-tooltip"></div> 
+		            </div>
+
+		            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+		            </button>
+
+		            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+		            </button>
+
+		            <div class="pswp__caption">
+		                <div class="pswp__caption__center"></div>
+		            </div>
+		        </div>
+		    </div>
+		</div>
   	</body>
-</html>
+
+  	<script src="js/app.js"></script>
+ </html>
