Switch to lightgallery over photoswipe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 		<!-- <link rel="shortcut icon" href="favicon.png" type="image/x-icon"> -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet">
+		<link href="css/lightgallery.min.css" rel="stylesheet"> 
+
 		<script src="js/jquery-1.12.0.min.js"></script>
+
+		<script src="js/lightgallery-all.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.particleground.min.js"></script>
 
@@ -21,14 +25,14 @@
 			<img src="Logo 2.png" class="logo">
 		</div>
 		<div class="content-wrapper">
-			<div class="content">
-				<a class="thumbnail-wrapper" href="#" onclick="expand(0)">
+			<div class="content" id="lightgallery">
+				<a class="thumbnail-wrapper" href="assets/DSC00031.JPG" onclick="expand(0)">
 					<img src="assets/DSC00031.JPG" class="thumbnail">
 				</a>
-				<a class="thumbnail-wrapper" href="#" onclick="expand(1)">
+				<a class="thumbnail-wrapper" href="assets/DSC00047.JPG" onclick="expand(1)">
 					<img src="assets/DSC00047.JPG" class="thumbnail">
 				</a>
-				<a class="thumbnail-wrapper" href="#" onclick="expand(2)">
+				<a class="thumbnail-wrapper" href="assets/DSC00052.JPG" onclick="expand(2)">
 					<img src="assets/DSC00052.JPG" class="thumbnail">
 				</a>
 				<a class="thumbnail-wrapper" href="#" onclick="expand(3)">
@@ -51,9 +55,6 @@
 				</a>
 				<a class="thumbnail-wrapper" href="#" onclick="expand(9)">
 					<img src="assets/DSC00378.JPG" class="thumbnail">
-				</a>
-				<a class="thumbnail-wrapper" href="#" onclick="expand(10)">
-					<img src="assets/DSC00385.JPG" class="thumbnail">
 				</a>
 			</div>
 		</div>
