--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/lightgallery.min.css" rel="stylesheet"> 
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" >
 		<script src="js/jquery-1.12.0.min.js"></script>
 		<script src="js/lightgallery-all.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
+		<div class="toolbar row">
+			<div class="col-sm-1">
+				<img src="toolbar-icon.png" height="35px">
+			</div>
+			<div class="col-sm-11 buttons">
+				<a href="#" class="buttons"><i class="fa fa-birthday-cake"></i></a>
+				<a href="mailto:mail@aneesphotos.com?Subject=Anees%20Photography" class="buttons"><i class="fa fa-envelope"></i></a>
+				<a href="https://github.com/aman6129/AneesPhotography" class="buttons"><i class="fa fa-code"></i></a>
+			</div>
+		</div>
 		<div class="header">
 			<img src="Logo 2.png" class="logo">
 		</div>
@@ -25,7 +36,7 @@
 				<div class="col-sm-4">
 					<b>Contact:</b> <br />
 					mail@aneesphotos.com <br />
-					Copyright 2016 <br />
+					copyright 2016 <br />
 				</div>
 				<div class="col-sm-8 message">
 					Made with <span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: #FF7570;"></span>
