--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img src="toolbar-icon.png" height="35px">
 			</div>
 			<div class="col-sm-11 buttons">
-				<a href="#" class="buttons"><i class="fa fa-birthday-cake"></i></a>
+				<a href="#" onclick="hbd()" class="buttons" data-toggle="collapse"><i class="fa fa-birthday-cake"></i></a>
 				<a href="mailto:mail@aneesphotos.com?Subject=Anees%20Photography" class="buttons"><i class="fa fa-envelope"></i></a>
 				<a href="https://github.com/aman6129/AneesPhotography" class="buttons"><i class="fa fa-code"></i></a>
 			</div>
