--- a/current/index.html
+++ b/current/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <base href="/">
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +19,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>Loading stuff needs to go here</my-app>
   </body>
 </html>
